--- a/BusDriveApp/app/pages/buslist/buslist.html
+++ b/BusDriveApp/app/pages/buslist/buslist.html
@@ -6,6 +6,6 @@
 
 <ion-content class="buslist">
     <ion-list>
-      <ion-item (click)="navigate()">{{firstParam}}</ion-item>
+        <ion-item ion-item *ngFor="#item of buslist" (click)="navigate()">{{item.title}}</ion-item>
     </ion-list>
 </ion-content>
