--- a/BusDriveApp/app/pages/home/home.html
+++ b/BusDriveApp/app/pages/home/home.html
@@ -1,9 +1,10 @@
-    <ion-content class="home">
+    <ion-content class="home" padding>
+        <div class="spacer" style="width: 283px; height: 75px;"></div>
         <div>
-            <img src="img/dd.png" width="100%" height="auto" style="display: block; margin-left: auto; margin-right: auto;">
+            <img src="img/dd.png" width="80%" height="auto" style="display: block; margin-left: auto; margin-right: auto;">
         </div>
-        <ion-content class="home">
-           <button (click)="navigate()">Start App</button>
-      </ion-content>
+        <div class="spacer" style="width: 283px; height: 100px;"></div>
+        <button class = "button button-block" (click)="navigate()">Start App</button>
+        <div class="spacer" style="width: 283px; height: 50px;"></div>
     </ion-content>
 
