--- a/BusDriveApp/app/pages/stops/stops.html
+++ b/BusDriveApp/app/pages/stops/stops.html
@@ -6,5 +6,7 @@
 </ion-navbar>
 
 <ion-content class="stops">
-
+  <ion-list>
+      <ion-item ion-item *ngFor="#item of stoplist" >{{item.title}}</ion-item>
+    </ion-list>
 </ion-content>
