#8  Bus list works with a Mockserver

--- a/BusDriveApp/app/pages/buslist/buslist.html
+++ b/BusDriveApp/app/pages/buslist/buslist.html
@@ -6,6 +6,6 @@
 
 <ion-content class="buslist">
     <ion-list>
-        <ion-item ion-item *ngFor="#item of buslist" (click)="navigate()">{{item.title}}</ion-item>
+        <ion-item ion-item *ngFor="#item of buslist" (click)="navigate()">{{item.id.toString()}} NumberPlate: {{item.numberPlate.toString()}}</ion-item>
     </ion-list>
 </ion-content>
