--- a/BusDriveApp/app/pages/stops/stops.html
+++ b/BusDriveApp/app/pages/stops/stops.html
@@ -7,6 +7,6 @@
 
 <ion-content class="stops">
   <ion-list>
-      <ion-item ion-item *ngFor="#item of stoplist" >{{item.title}}</ion-item>
+      <ion-item ion-item *ngFor="#item of stoplist" >{{item.id.toString()}}</ion-item>
     </ion-list>
 </ion-content>
