--- a/BusDriveApp/app/pages/map/map.html
+++ b/BusDriveApp/app/pages/map/map.html
@@ -5,6 +5,6 @@
   </ion-title>
 </ion-navbar>
 
-<ion-content class="maps">
-  <div id="map"></div> 
+<ion-content class="map">
+  <div id="map"></div>
 </ion-content>
