--- a/BusDriveApp/www/index.html
+++ b/BusDriveApp/www/index.html
@@ -17,6 +17,8 @@
   <ion-app></ion-app>
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
+  <!-- Google maps JS API -->
+  <script src="http://maps.google.com/maps/api/js"></script>
   <!-- Polyfill needed for platforms without Promise and Collection support -->
   <script src="build/js/es6-shim.min.js"></script>
   <!-- Zone.js and Reflect-metadata  -->
