--- a/BusDriveApp/app/pages/linelist/linelist.html
+++ b/BusDriveApp/app/pages/linelist/linelist.html
@@ -1,11 +1,17 @@
 <ion-navbar *navbar>
-  <ion-title>
-    Line List
-  </ion-title>
+    <ion-title>
+        Line List
+    </ion-title>
 </ion-navbar>
 
 <ion-content class="linelist">
     <ion-list>
-      <ion-item ion-item *ngFor="#item of linelist" (click)="navigate(item)">{{item.id.toString()}}  Name: {{item.name.toString()}}</ion-item>
+        <ion-item ion-item *ngFor="#item of linelist" (click)="navigate(item)"> 
+            <ion-thumbnail item-left>
+                <img src="img/line.svg">
+            </ion-thumbnail>
+            <h2>Line-Nr. {{item.id.toString()}}</h2>
+            <p>Name:{{item.name.toString()}}</p>           
+        </ion-item>
     </ion-list>
 </ion-content>
