#11: navbar, tabs, background colors updated

--- a/BusDriveApp/app/pages/drive/drive.html
+++ b/BusDriveApp/app/pages/drive/drive.html
@@ -1,4 +1,4 @@
-<ion-navbar *navbar>
+<ion-navbar primary *navbar>
     <ion-title>Drive</ion-title>
 </ion-navbar>
 
@@ -7,7 +7,7 @@
         <p>
             <button large (click)="decrease()">
                 <ion-icon name="remove"></ion-icon>
-            </button>           
+            </button>
             <button clear> Number of Passengers:
                 {{counter}}
             </button>
