--- a/BusDriveApp/app/pages/tabs/tabs.html
+++ b/BusDriveApp/app/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs primary2>
     <ion-tab [root]="tab1Root" [rootParams]="" tabTitle="Drive" tabIcon="bus"></ion-tab>
     <ion-tab [root]="tab2Root" [rootParams]="stoplist" tabTitle="Map" tabIcon="map"></ion-tab>
     <ion-tab [root]="tab3Root" [rootParams]="stoplist" tabTitle="Stops" tabIcon="stopwatch"></ion-tab>
