#11 changed language dependent text to variables

--- a/BusDriveApp/app/pages/drive/drive.html
+++ b/BusDriveApp/app/pages/drive/drive.html
@@ -1,5 +1,5 @@
 <ion-navbar primary *navbar>
-    <ion-title>Drive</ion-title>
+    <ion-title>{{title}}</ion-title>
 </ion-navbar>
 
 <ion-content class="drive" padding>
@@ -14,9 +14,7 @@
                     </div>
                 </td>
                 <td class="text">
-                    
                     <h2>{{passengers}}<br> {{counter}}</h2>
-                    
                 </td>     
                 <td > 
                     <div class="buttonright">
