--- a/BusDriveApp/app/pages/stops/stops.html
+++ b/BusDriveApp/app/pages/stops/stops.html
@@ -1,12 +1,15 @@
 
 <ion-navbar primary *navbar>
   <ion-title>
-    Stops
+    {{title}}
   </ion-title>
 </ion-navbar>
 
 <ion-content class="stops">
   <ion-list>
-      <ion-item ion-item *ngFor="#item of stoplist" >{{item.id.toString()}}</ion-item>
+    
+      <ion-item  ion-item *ngFor="#item of stoplist" >
+            <p>{{item.id.toString()}} Ist dieser text gut?<!-- add stop name here><--></p>
+       </ion-item> 
     </ion-list>
 </ion-content>
