--- a/BusDriveApp/app/pages/buslist/buslist.html
+++ b/BusDriveApp/app/pages/buslist/buslist.html
@@ -1,6 +1,6 @@
 <ion-navbar primary *navbar>
     <ion-title>
-        Bus List
+        {{title}}
     </ion-title>
 </ion-navbar>
 
@@ -11,7 +11,7 @@
                 <img src="img/bus.svg">
             </ion-thumbnail>
             <h2>Bus Nr. {{item.id.toString()}}</h2>
-            <p>NumberPlate: {{item.numberPlate.toString()}}</p>           
+            <p>{{numberplate}} {{item.numberPlate.toString()}}</p>           
         </ion-item>
     </ion-list>
 </ion-content>
