--- a/BusDriveApp/app/pages/home/home.html
+++ b/BusDriveApp/app/pages/home/home.html
@@ -6,5 +6,6 @@
     <div class="spacer" style="width: 283px; height: 100px;"></div>
     <button large class="button button-block" (click)="navigate()">Start App</button>
     <div class="spacer" style="width: 283px; height: 50px;"></div>
+    <button class="languageButton" (click)="changeLanguage()"> {{buttontext}} </button>
 </ion-content>
 
