#7: small changes #8: added "getRoutes()" and edited JSON #9: added Geolocation-Marker, route is now just a connection of geo-points
ToDo: show only stops/route of selected line

--- a/BusDriveApp/app/pages/stops/stops.html
+++ b/BusDriveApp/app/pages/stops/stops.html
@@ -6,10 +6,10 @@
 </ion-navbar>
 
 <ion-content class="stops">
-  <ion-list>
-    
-      <ion-item  ion-item *ngFor="#item of stoplist" >
-            <p>{{item.id.toString()}} Ist dieser text gut?<!-- add stop name here><--></p>
-       </ion-item> 
+    <ion-list>
+        <ion-item ion-item *ngFor="#item of stoplist" > 
+            <h2>Stop {{item.id.toString()}}</h2>
+            <p>{{item.name.toString()}}</p>           
+        </ion-item>
     </ion-list>
 </ion-content>
