--- a/BusDriveApp/www/index.html
+++ b/BusDriveApp/www/index.html
@@ -19,8 +19,8 @@
   <script src="cordova.js"></script>
   <!-- Google maps JS API -->
   <script src="http://maps.google.com/maps/api/js"></script>
-  <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/geolocationmarker/src/geolocationmarker-compiled.js"></script>
-  <!-- Polyfill needed for platforms without Promise and Collection support -->
+ <script src="https://chadkillingsworth.github.io/geolocation-marker/geolocation-marker.js"></script>
+ <!-- Polyfill needed for platforms without Promise and Collection support -->
   <script src="build/js/es6-shim.min.js"></script>
   <!-- Zone.js and Reflect-metadata  -->
   <script src="build/js/angular2-polyfills.js"></script>
