#7: - getRoute and getStops now in tabs.ts, - now route and stops are shown without a problem
#9: - deleted GeolocationMarker, because it caused some problems, - now
we use GeolocationControl, - the shown stops and route are from the
selected line.

--- a/BusDriveApp/app/pages/stops/stops.html
+++ b/BusDriveApp/app/pages/stops/stops.html
@@ -7,7 +7,7 @@
 
 <ion-content class="stops">
     <ion-list>
-        <ion-item ion-item *ngFor="#item of stoplist" > 
+        <ion-item ion-item *ngFor="#item of LineStops" > 
             <h2>Stop {{item.id.toString()}}</h2>
             <p>{{item.name.toString()}}</p>           
         </ion-item>
