--- a/BusDriveApp/app/pages/buslist/buslist.html
+++ b/BusDriveApp/app/pages/buslist/buslist.html
@@ -8,7 +8,7 @@
     <ion-list>
         <ion-item ion-item *ngFor="#item of buslist" (click)="navigate(item)"> 
             <ion-thumbnail item-left>
-                <img src="img/bus.svg">
+                <ion-icon name="bus" style="font-size:100px" ></ion-icon>
             </ion-thumbnail>
             <h2>Bus Nr. {{item.id.toString()}}</h2>
             <p>{{numberplate}} {{item.numberPlate.toString()}}</p>           
