--- a/BusDriveApp/app/pages/linelist/linelist.html
+++ b/BusDriveApp/app/pages/linelist/linelist.html
@@ -8,7 +8,7 @@
     <ion-list>
         <ion-item ion-item *ngFor="#item of linelist" (click)="navigate(item)"> 
             <ion-thumbnail item-left>
-                <img src="img/line.svg">
+                <ion-icon name="git-compare" style="font-size:90px" ></ion-icon>
             </ion-thumbnail>
             <h2>{{Line}} {{item.id.toString()}}</h2>
             <p>{{item.name.toString()}}</p>           
