#26 Small GUI improvements
server textfield moved to top, stopslist doesn't show stop id, tabs
color changed to primary, new language variable in linelist

--- a/BusDriveApp/app/pages/linelist/linelist.html
+++ b/BusDriveApp/app/pages/linelist/linelist.html
@@ -10,7 +10,7 @@
             <ion-thumbnail item-left>
                 <ion-icon name="git-compare" style="font-size:90px" ></ion-icon>
             </ion-thumbnail>
-            <h2>{{Line}} {{item.id.toString()}}</h2>
+            <h2>{{lineName}} {{item.id.toString()}}</h2>
             <p>{{item.name.toString()}}</p>           
         </ion-item>
     </ion-list>
