--- a/BusDriveApp/app/pages/stops/stops.html
+++ b/BusDriveApp/app/pages/stops/stops.html
@@ -8,8 +8,7 @@
 <ion-content class="stops">
     <ion-list>
         <ion-item ion-item *ngFor="#item of LineStops" > 
-            <h2>Stop {{item.id.toString()}}</h2>
-            <p>{{item.name.toString()}}</p>           
+            <h2>{{item.name.toString()}}</h2>           
         </ion-item>
     </ion-list>
 </ion-content>
