--- a/BusDriveApp/app/pages/map/map.html
+++ b/BusDriveApp/app/pages/map/map.html
@@ -1,9 +1,12 @@
 <ion-navbar primary *navbar>
-  <ion-title>
-     {{title}}
-  </ion-title>
+    <ion-title>
+        {{title}}
+    </ion-title>
+    <ion-buttons end>
+        <button class="button " (click)="showLine()">Line</button>
+    </ion-buttons>
 </ion-navbar>
 
 <ion-content class="map">
-  <div id="map"></div>
+    <map></map>
 </ion-content>
