#26 #28  : added menucontroller, updated ionic and angular and small changes in map.ts

--- a/BusDriveApp/app/pages/home/home.html
+++ b/BusDriveApp/app/pages/home/home.html
@@ -1,3 +1,10 @@
+<ion-navbar *navbar>
+  <button menuToggle>
+    <ion-icon name="menu"></ion-icon>
+  </button>
+  <ion-title>HomePage</ion-title>
+</ion-navbar>
+
 <ion-content class="home" padding>
     <ion-item>
         <ion-label>Server IP: </ion-label>
