--- a/BusDriveApp/www/index.html
+++ b/BusDriveApp/www/index.html
@@ -18,7 +18,9 @@
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
   <!-- Google maps JS API -->
-  <script src="http://maps.google.com/maps/api/js"></script>
+  <!--script src="http://maps.google.com/maps/api/js?key=AIzaSyA3Lm7QBniLhs-m2ytGLOlqJdEFl3bWx5U"></scrip-->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3Lm7QBniLhs-m2ytGLOlqJdEFl3bWx5U&sensor=true" type="text/javascript"></script>
+
   <script src="https://cdn.klokantech.com/maptilerlayer/v1/index.js"></script>
   <!-- Polyfill needed for platforms without Promise and Collection support -->
   <script src="build/js/es6-shim.min.js"></script>
