--- a/BusDriveApp/app/app.html
+++ b/BusDriveApp/app/app.html
@@ -1,12 +1,13 @@
 <ion-menu [content]="content">
 
-  <ion-toolbar>
-    <ion-title>Pages</ion-title>
+  <ion-toolbar primary >
+    <ion-title>Menu</ion-title>
   </ion-toolbar>
 
   <ion-content>
     <ion-list>
       <button ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        <ion-icon name="{{p.icon}}" item-left></ion-icon>
         {{p.title}}
       </button>
     </ion-list>
