--- a/BusDriveApp/app/app.html
+++ b/BusDriveApp/app/app.html
@@ -1,8 +1,8 @@
 <ion-menu [content]="content">
 
-  <ion-toolbar primary >
-    <ion-title>Menu</ion-title>
-  </ion-toolbar>
+    <div>
+        <img src="img/dd.png" width="60%" height="auto" style="display: block; margin-left: auto; margin-right: auto;">
+    </div>
 
   <ion-content>
     <ion-list>
