--- a/BusDriveApp/app/pages/home/home.html
+++ b/BusDriveApp/app/pages/home/home.html
@@ -2,7 +2,7 @@
   <button menuToggle>
     <ion-icon name="menu"></ion-icon>
   </button>
-  <ion-title>BusDriveApp</ion-title>
+  <ion-title>Tour</ion-title>
 </ion-navbar>
 
 <ion-content class="home" padding>
@@ -11,6 +11,6 @@
         <img src="img/dd.png" width="80%" height="auto" style="display: block; margin-left: auto; margin-right: auto;">
     </div>
     <div class="spacer" style="width: 283px; height: 100px;"></div>
-    <button large class="button button-block" (click)="navigate()">Start App</button>
+    <button large class="button button-block" (click)="navigate()">Tour beginnen</button>
     <div class="spacer" style="width: 283px; height: 50px;"></div>
 </ion-content>
