--- a/BusDriveApp/app/app.html
+++ b/BusDriveApp/app/app.html
@@ -1,9 +1,7 @@
 <ion-menu [content]="content">
-
-    <div>
-        <img src="img/dd.png" width="60%" height="auto" style="display: block; margin-left: auto; margin-right: auto;">
-    </div>
-
+  <div>
+    <img src="img/dd.png" width="60%" height="auto" style="display: block; margin-left: auto; margin-right: auto;">
+  </div>
   <ion-content>
     <ion-list>
       <button ion-item *ngFor="let p of pages" (click)="openPage(p)">
@@ -12,7 +10,11 @@
       </button>
     </ion-list>
   </ion-content>
-
+  <ion-toolbar position="bottom">
+    <button full dark (click)="exit()" class="close">
+    <ion-icon name="close" is-active="false"></ion-icon>
+  </button>
+  </ion-toolbar>
 </ion-menu>
 
 <ion-nav id="nav" [root]="rootPage" #content swipe-back-enabled="false"></ion-nav>
