#39 I added translation for homescreen and about screen
TODO: Sidemenue and settings

--- a/BusDriveApp/app/pages/home/home.html
+++ b/BusDriveApp/app/pages/home/home.html
@@ -11,6 +11,6 @@
         <img src="img/dd.png" width="80%" height="auto" style="display: block; margin-left: auto; margin-right: auto;">
     </div>
     <div class="spacer" style="width: 283px; height: 100px;"></div>
-    <button large class="button button-block" (click)="navigate()">Tour beginnen</button>
+    <button large class="button button-block" (click)="navigate()">{{beginTour}}</button>
     <div class="spacer" style="width: 283px; height: 50px;"></div>
 </ion-content>
