--- a/BusDriveApp/app/pages/tabs/tabs.html
+++ b/BusDriveApp/app/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs primary>
-    <ion-tab [root]="tab1Root" [rootParams]="" tabTitle={{drive}} tabIcon="bus"></ion-tab>
+    <ion-tab [root]="tab1Root" [rootParams]="rootParams" tabTitle={{drive}} tabIcon="bus"></ion-tab>
     <ion-tab [root]="tab2Root" [rootParams]="rootParams" tabTitle={{map}} tabIcon="map"></ion-tab>
     <ion-tab [root]="tab3Root" [rootParams]="rootParams" tabTitle={{stops}} tabIcon="stopwatch"></ion-tab>
 </ion-tabs>
