#42 : added SF NextStop ( not finished / should be discussed )
everything associated with moved to services -> lot of changes

--- a/BusDriveApp/app/pages/buslist/buslist.html
+++ b/BusDriveApp/app/pages/buslist/buslist.html
@@ -6,12 +6,12 @@
 
 <ion-content class="buslist">
     <ion-list>
-        <ion-item ion-item *ngFor="let item of buslist" (click)="navigate(item)"> 
+        <ion-item *ngFor="let item of bussesInfos" (click)="navigate(item)"> 
             <ion-thumbnail item-left>
                 <ion-icon name="bus" style="font-size:100px" ></ion-icon>
             </ion-thumbnail>
-            <h2>Bus Nr. {{item.id.toString()}}</h2>
-            <p>{{numberplate}} {{item.numberPlate.toString()}}</p>           
+            <h2>Bus Nr. {{item[0]}}</h2>
+            <p>{{numberplate}} {{item[1]}}</p>           
         </ion-item>
     </ion-list>
 </ion-content>
