--- a/BusDriveApp/app/pages/stops/stops.html
+++ b/BusDriveApp/app/pages/stops/stops.html
@@ -7,8 +7,8 @@
 
 <ion-content class="stops">
     <ion-list>
-        <ion-item ion-item *ngFor="let item of LineStops" > 
-            <h2>{{item.name.toString()}}</h2>           
+        <ion-item *ngFor="let item of linestopsnames" > 
+            <h2>{{item}}</h2>           
         </ion-item>
     </ion-list>
 </ion-content>
