--- a/BusDriveApp/app/pages/buslist/buslist.html
+++ b/BusDriveApp/app/pages/buslist/buslist.html
@@ -6,7 +6,7 @@
 
 <ion-content class="buslist">
     <ion-list>
-        <ion-item *ngFor="let item of bussesInfos" (click)="navigate(item)"> 
+        <ion-item *ngFor="let item of bussesInfos" (click)="selectBus(item)"> 
             <ion-thumbnail item-left>
                 <ion-icon name="bus" style="font-size:100px" ></ion-icon>
             </ion-thumbnail>
