--- a/BusDriveApp/app/pages/drive/drive.html
+++ b/BusDriveApp/app/pages/drive/drive.html
@@ -116,7 +116,7 @@
                             <ion-icon name="checkmark"></ion-icon>
                                  Akzeptieren
                         </button>
-                    <button primary (click)="rejecteCustomStop(item)">
+                    <button primary (click)="declineCustomStop(item)">
                             <ion-icon name="close"></ion-icon>
                                 Ablehnen
                         </button>
