#52 : added number of total steats

--- a/BusDriveApp/app/pages/buslist/buslist.html
+++ b/BusDriveApp/app/pages/buslist/buslist.html
@@ -11,7 +11,8 @@
                 <ion-icon name="bus" style="font-size:100px" ></ion-icon>
             </ion-thumbnail>
             <h2>Bus Nr. {{item[0]}}</h2>
-            <p>{{numberplate}} {{item[1]}}</p>           
+            <p>{{numberplate}} {{item[1]}}</p>   
+            <p>Sitzplätze {{item[2]}}</p>          
         </ion-item>
     </ion-list>
 </ion-content>
