--- a/BusDriveApp/app/pages/drive/drive.html
+++ b/BusDriveApp/app/pages/drive/drive.html
@@ -39,7 +39,7 @@
                             </div>
                         </td>
                         <td class="text">
-                            <h2>{{counter}}</h2>
+                            <h2>{{counter}} / {{totalbusseats}}</h2>
                         </td>
                         <td align="right">
                             <div class="buttonright">
